k8s/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aml-streamlit-service
  labels:
    app: aml-streamlit
spec:
  selector:
    app: aml-streamlit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP
