k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aml-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: aml.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: aml-fastapi-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aml-streamlit-service
                port:
                  number: 80
